--- a/AB-TEST Case Study/AB Test Case Study.ipynb
+++ b/AB-TEST Case Study/AB Test Case Study.ipynb
@@ -86,8 +86,7 @@
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "sns.set_theme()\n",
-    "import statsmodels "
+    "sns.set_theme()"
    ]
   },
   {
